style.css
html {
    background-color: rgb(43, 43, 43);
    color: whitesmoke;
}

.calculator {
    width: 400px;
    height: 575px;
    padding: 10px;
    border: 2px solid rgb(97, 97, 97);
    border-radius: 25px;

    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

.special-container {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
}

.display-container {
    background-color: white;
    color: black;

    width: auto;
    height: auto;
    margin: 5%;
    padding: 10px;
    border: 1px solid white;
    border-radius: 10px;

    text-align: right;
    font-size: xxx-large;
    font-family: Arial, Helvetica, sans-serif;
}

.button-container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    border: 5px red;
}

.calculator-row {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
}

.calculator-button {
    width: 75px;
    height: 75px;
    margin: 10px;
    font-size: 25px;
    border-radius: 5px;
    border: none;
    background-color: #e0e0e0;
    cursor: pointer;
    transition: background-color 0.3s ease;
}

.button-delete{
    width: 75px;
    height: 37px;
    margin: 10px;
    margin-right: 0%;
    font-size: 25px;
    border-radius: 5px;
    border: none;
    background-color: #ddb0b0;
    cursor: pointer;
    transition: background-color 0.3s ease;
}

.calculator-button:hover {
    background-color: #c0c0c0;
}

.button-delete:hover {
    background-color: #ca6f6f;
}

